There was horizontal scrolling introduced on the car sourcing page due to a misplaced div which was corrected. I also tested out a new image resolution so that the space is filled correctly and consistently which works as hoped. As a result, the vehicle page carousel now renders images much better

--- a/cardealership/static/css/style.css
+++ b/cardealership/static/css/style.css
@@ -470,13 +470,14 @@ i {
     margin-top:10px;
 }
 
-.slider-img {
-    max-width: 100%;
-    height:auto;
+.slick-slide img {
+    width:100%;
+    padding:2px;
 }
 
 .slider-nav {
     margin-top:10px;
+    width:100%;
 }
 
 .slider-thumbnail {
